@@ -42,6 +42,9 @@ Contributors (alphabetically ordered):
 * CJ Hanson (myBuddyCJ, wiseganesha, CJeazy) (http://www.hansoninteractive.com/)
     CCFadeIn and CCFadeOut respect opacity of node
     
+* Colin McCune 
+    Ported fix from 2.0 to 1.1. fixes compile errors compatible with xCode 4.4 and higher due to incorrect format in reporting strings
+    
 * Fabian Rueger
     Provided Beacon.png for new spriteTest
 
