@@ -342,7 +342,7 @@ static NSUInteger globalOrderOfArrival = 0;
 
 - (NSString*) description
 {
-	return [NSString stringWithFormat:@"<%@ = %08X | Tag = %i>", [self class], self, tag_];
+	return [NSString stringWithFormat:@"<%@ = %p | Tag = %i>", [self class], self, tag_];
 }
 
 - (void) dealloc
