@@ -39,7 +39,9 @@ version 1.1-rc0 ..-..-2012
 . [FIX] RenderTexture: fixed new getUIImageFromBuffer implementation
 . [FIX] TouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
 . [FIX] Grabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
-. [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
+. [FIX] Compiler 
+        fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
+        changed %08X to %p in reporting strings for resolving compile errors in xCode 4.4/LLVM 4 
 . [FIX] Tests: MenuTest moved actions from init to onEnter (issue #884)
 . [FIX-MAC] CCDirectorMac: convertToLogicalCoordinates compensates for viewport offset when a custom projection is set 
 
